# gachagame

./: .gitignore  Cargo.toml  README.md  shell.nix
frontend/: admin.css  admin.html  admin.js  archive.css  archive.html  archive.js  auth.js  gacha.html  gacha.js  index.html  login.html  style.css  utils.js
migrations/: 0001_init.sql  0002_add-gold.sql  0003_add-auth.sql
src/: db.rs  error.rs  gacha.rs  handlers.rs  main.rs  models.rs  session.rs
